# sheaf-cohomology

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
examples/: tutorial.rs
memory/: JOURNAL.md
src/: lib.rs  main.rs
tests/: integration.rs
