[package]
name = "sheaf-cohomology"
version = "0.3.0"
edition = "2021"
description = "Sheaf cohomology in Rust — sheaves on topological spaces, Čech cohomology, sheaf sequences, cohomology groups"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/sheaf-cohomology"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
